samples/_failures_safe/1761256652_694605_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d9b674f2.c: In function ‘main’:
./samples/SAFE/__tmp_d9b674f2.c:144:16: error: expected declaration or statement at end of input
  144 |         struct log_entry entry;
      |                ^~~~~~~~~
./samples/SAFE/__tmp_d9b674f2.c:144:16: error: expected declaration or statement at end of input
